<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Application 4</string>
    <string name="hello_world">Hello World!</string>
    <string name="enter_question">Введите вопрос</string>
    <string name="enter_example">Введите подсказку</string>
    <string name="enter_answer">Введите ответ</string>
    <string name="enter_translate">Введите перевод</string>
    <string name="save">Сохранить</string>
    <string name="add_card">Add Card</string>
    <string name="question">Question</string>
    <string name="example">Example</string>
    <string name="answer">Answer</string>
    <string name="translate">Translate</string>
    <string name="delete_card_title">Delete Card</string>
    <string name="delete_card_message">Are you sure you want to delete this card?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
